[package]
name = "crewrite"
version = "0.1.0"
authors = ["Luke I. Wilson <thelukaswils@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# this was written in QEdit ;)

[dependencies]
termion = "1.5.3"
scribe = "0.7.2"
textwrap = "0.11.0"
vek = "0.9.8"
#vte = "0.3.3" # for terminal emulation