[package]
name = "diesel"
version = "0.1.0"
authors = ["Luke I. Wilson <thelukaswils@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# this was written in QEdit ;)

[profile.release]
lto = true

[dependencies]
crossterm = "0.17.5"
scribe = "0.7.2"
textwrap = "0.11.0"
vek = "0.9.8"
lazy_static = "1.3.0"
#vte = "0.3.3" # for terminal emulation